--- a/flink-runtime-web/pom.xml
+++ b/flink-runtime-web/pom.xml
@@ -135,7 +135,7 @@ under the License.
 				</property>
 			</activation>
 			<properties>
-				<npm.proxy>--registry http://172.17.0.1:8888/repository/npm/</npm.proxy>
+				<npm.proxy>--registry http://registry.npmjs.org/npm/</npm.proxy>
 			</properties>
 		</profile>
 	</profiles>
